# parfor_issue

./: .gitignore  .gitmodules  cor.txt  cor2.txt  line2.m  par000307.txt  par000308.m  readme.md
gpu_code/: .clang-format  CMakeLists.txt  main.cpp
gpu_code/cuda/: CMakeLists.txt  foo.cu  foo.cuh
gpu_code/src/: print_points.cpp  print_points.h  save_mat.hpp  save_object.hpp  writer_class.hpp
matlab_code/: find_intersect.m  matlab_test.m  par000307.m  par000308.m  plotresult.m  test_csv.m  testline2.m
